--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,8 @@
     "editor.tokenColorCustomizations": {
         "comments": "#ffbd00"
     },
-    
+
+    "workbench.colorCustomizations": {
+        "editorError.foreground": "#d50000",
+   }
 }
